[package]
name = "i-lang"
version = "0.1.0"
authors = ["Evgeny Ukhanov <mrlsd@ya.ru>"]
description = "Functional programming language"
license = "MIT"
repository = "https://github.com/mrLSD/iLang"
readme = "README.md"
edition = "2018"

[dependencies]
nom = "5.1"
nom_locate = "2.0"
clap = "2.33"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm12-0"]

[features]
default = ["fn_body", "fn_body_statement"]
fn_main = []
fn_global_let = []
fn_body = []
fn_body_statement = ["function_call", "function_value_call"]
fn_body_statement_dump = []
function_call = ["function_value"]
function_value_call = []
# function_call = []
function_value = ["value_expression"]
# function_value = []
value_expression = ["type_expression"]
# value_expression = []
type_expression = []